peer-code-review feedback: fix contact section width on small screens

--- a/assets/css/small-screens.css
+++ b/assets/css/small-screens.css
@@ -126,7 +126,8 @@
     }
 
     #contact-form {
-        max-width: 60%;
+        /*fix width issue*/
+        width: 60%;
     }
 
     #success-message {
